fix: stylized overflow

--- a/styles/header.css
+++ b/styles/header.css
@@ -49,7 +49,6 @@ header {
 }
 
 .player-podcast {
-  border: 1px solid red;
   height: 100vh;
   flex: 0.5;
 }
