--- a/styles/latest-releases.css
+++ b/styles/latest-releases.css
@@ -4,6 +4,23 @@
   overflow-x: hidden;
 }
 
+.container-overflow::-webkit-scrollbar {
+  width: 6px;
+}
+
+.container-overflow::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+.container-overflow::-webkit-scrollbar-thumb {
+  background-color: var(--text-body-nofocused);
+  border-radius: 8px;
+}
+
+.container-overflow::-webkit-scrollbar-thumb:hover {
+  background-color: var(--text-body);
+}
+
 .latest-releases {
   padding: 0 4rem;
 }
@@ -33,8 +50,10 @@
 
 .track-image {
   width: min(6rem, 100%);
-  height: min(6rem, 100%);
-  padding: 1.2rem;
+
+  padding: 0 1.2rem;
+  display: flex;
+  align-items: center;
 }
 
 .player-track {
